--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -25,7 +25,7 @@ on:
         type: boolean
 
 env:
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository_owner }}/unbound
 
 jobs:
   validate-and-test:
