--- a/.github/workflows/test-docker.yml
+++ b/.github/workflows/test-docker.yml
@@ -26,7 +26,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository_owner }}/unbound
 
 jobs:
   test-published:
